$Id$

Search API 1.0, dev (xx/xx/xxxx):
------------------------------------
API changes:
- #991632: Incorporate newly available entity hooks.
- #963062: Make facets exportable.

Others:
- #997852: Service config oddities.
- #994948: "Add index" results in blank page.
- #993470: Unnecessary warning when no valid keys or filters are given.
- #986412: Notice: Undefined index: value in theme_search_api_page_result().
- #987928: EntityDBExtendable::__sleep() is gone.
- #985324: Add "Current search" block.
- #984174: Bug in Index::prepareProcessors() when processors have not been set.

Search API 1.0, Beta 4 (11/29/2010):
------------------------------------
API changes:
- #976876: Move Solr module into its own project.
- #962582: Cross-entity searches (API addition).
- #939482 by fago: Fix exportables.
- #939092: Several API changes regarding service class methods.
- #939414: Enhanced service class descriptions. [soft API change]
- #939464: Documented Entity API's module and status properties.
- #939092: Changed private members to protected in all classes.
- #936360: Make servers and indexes exportable.

Others:
- #966512: "Time ago" option for Views date fields (+bug fix for missing value).
- #965318: Lots of notices if entities are missing in Views.
- #961210: Hide error messages.
- #963756: Array to string conversion error.
- #961276: Some random bugs.
- #961122: Exportability UI fixes.
- #913858: Fix adding properties that are lists of entities.
- #961210: Don't hide error messages.
- #961122: Display configuration status when viewing entities.
- #889286: EntityAPIController::load() produces WSoD sometimes.
- #958378 by marvil07: "Clear index" is broken
- #955892: Typo in search_api_solr.install.
- #951830: "List of language IDs" context suspicious.
- #939414: Rename "data-alter callbacks" to "data alterations".
- #939460: Views integration troubles.
- #945754: Fix server and index machine name inputs.
- #943578: Duplicate fields on service creation.